// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Card Snapshot using custom styles 1`] = `
<div
  className="jsx-1324345059"
  style={
    Object {
      "borderRadius": "20px",
      "padding": "0",
    }
  }
>
  <a
    className="jsx-1324345059"
    href=""
  >
    <h1>
      Card Test
    </h1>
  </a>
</div>
`;

exports[`Component Card Snapshot without arguments, take the default values 1`] = `
<div
  className="jsx-1324345059"
  style={Object {}}
>
  <a
    className="jsx-1324345059"
    href=""
  >
    <h1>
      Card Test
    </h1>
  </a>
</div>
`;
